--- a/项目结构说明.md
+++ b/项目结构说明.md
@@ -31,13 +31,31 @@ app/
     │   ├── java/                # Kotlin/Java 源代码目录
     │   │   └── com/xuyang/ttpage/
     │   │       ├── MainActivity.kt      # 主Activity（应用入口）⭐
-    │   │       └── ui/                  # UI相关代码
-    │   │           └── theme/          # 主题配置
-    │   │               ├── Color.kt     # 颜色定义
-    │   │               ├── Theme.kt     # 主题配置
-    │   │               └── Type.kt      # 字体样式
+    │   │       ├── model/              # Model层：数据模型和仓库
+    │   │       │   ├── data/
+    │   │       │   │   └── Content.kt  # 内容数据模型
+    │   │       │   └── repository/
+    │   │       │       └── ContentRepository.kt  # 数据仓库
+    │   │       ├── viewmodel/          # ViewModel层：状态管理
+    │   │       │   └── HomeViewModel.kt  # 首页视图模型
+    │   │       ├── ui/                 # View层：UI相关代码
+    │   │       │   ├── theme/          # 主题配置
+    │   │       │   │   ├── Color.kt    # 颜色定义
+    │   │       │   │   ├── Theme.kt    # 主题配置
+    │   │       │   │   └── Type.kt     # 字体样式
+    │   │       │   ├── screens/        # 页面
+    │   │       │   │   ├── HomeScreen.kt      # 首页（双列推荐）
+    │   │       │   │   └── DetailScreen.kt    # 详情页
+    │   │       │   └── components/     # 可复用组件
+    │   │       │       └── VideoPlayer.kt     # 视频播放器组件
+    │   │       ├── navigation/         # 导航相关
+    │   │       │   ├── NavGraph.kt     # 导航图配置
+    │   │       │   └── Screen.kt       # 路由定义
+    │   │       └── util/               # 工具类
+    │   │           └── ResourceHelper.kt  # 资源工具类
     │   └── res/                  # 资源文件目录
-    │       ├── drawable/         # 图片和矢量图资源
+    │       ├── drawable/         # 图片资源（包括视频封面）
+    │       ├── raw/               # 原始资源（视频文件等）
     │       ├── mipmap-*/         # 应用图标（不同分辨率）
     │       ├── values/           # 值资源（颜色、字符串、样式等）
     │       │   ├── colors.xml    # 颜色资源
@@ -62,6 +80,10 @@ app/
 - `androidx.compose.ui` - Compose UI 核心库
 - `androidx.activity.compose` - Activity 与 Compose 集成
 - `androidx.lifecycle.runtime.ktx` - 生命周期管理
+- `androidx.lifecycle.viewmodel.compose` - ViewModel 支持
+- `androidx.navigation.compose` - Navigation 导航组件
+- `androidx.media3.exoplayer` - ExoPlayer 视频播放器
+- `androidx.media3.ui` - ExoPlayer UI 组件
 
 ## 🚀 从哪里开始开发？
 
@@ -125,21 +147,56 @@ app/
    - 建议按功能模块组织代码
    - 例如：`ui/screens/`（页面）、`ui/components/`（组件）、`data/`（数据）等
 
-### 推荐的代码组织方式：
+### 当前项目结构（MVVM架构）：
 
 ```
 app/src/main/java/com/xuyang/ttpage/
-├── MainActivity.kt              # 主Activity
-├── ui/
-│   ├── theme/                   # 主题
-│   ├── screens/                 # 页面（建议创建）
-│   │   └── HomeScreen.kt
-│   └── components/              # 可复用组件（建议创建）
-│       └── CustomButton.kt
-├── data/                        # 数据层（建议创建）
-│   └── models/
-└── viewmodel/                   # ViewModel（建议创建）
-    └── MainViewModel.kt
+├── MainActivity.kt              # 主Activity（View层入口）
+│
+├── model/                        # Model层：数据和业务逻辑
+│   ├── data/
+│   │   └── Content.kt           # 内容数据模型（包含视频属性）
+│   └── repository/
+│       └── ContentRepository.kt # 数据仓库（提供模拟数据）
+│
+├── viewmodel/                    # ViewModel层：状态管理
+│   └── HomeViewModel.kt         # 首页视图模型
+│
+├── ui/                           # View层：UI界面
+│   ├── theme/                    # 主题配置
+│   │   ├── Color.kt
+│   │   ├── Theme.kt
+│   │   └── Type.kt
+│   ├── screens/                  # 页面
+│   │   ├── HomeScreen.kt        # 首页（双列推荐布局）
+│   │   └── DetailScreen.kt      # 详情页（显示内容和视频）
+│   └── components/              # 可复用组件
+│       └── VideoPlayer.kt       # 视频播放器（播放/暂停/进度条）
+│
+├── navigation/                   # 导航相关
+│   ├── NavGraph.kt              # 导航图配置
+│   └── Screen.kt                # 路由定义
+│
+└── util/                         # 工具类
+    └── ResourceHelper.kt        # 资源工具类（本地资源URI）
+```
+
+### 资源文件结构：
+
+```
+app/src/main/res/
+├── drawable/                     # 图片资源
+│   ├── cover1.png               # 视频封面图片
+│   ├── cover2.png
+│   └── ...
+├── raw/                          # 原始资源
+│   ├── video1.mp4               # 视频文件
+│   ├── video2.mp4
+│   └── ...
+└── values/                        # 值资源
+    ├── colors.xml
+    ├── strings.xml
+    └── themes.xml
 ```
 
 ## 🎯 下一步行动
@@ -163,16 +220,38 @@ app/src/main/java/com/xuyang/ttpage/
    - [Kotlin 官方文档](https://kotlinlang.org/docs/home.html)
    - [Android 开发者指南](https://developer.android.com/guide)
 
+## 📦 已实现的功能
+
+### Feature/Basic ✅
+1. ✅ 首页双列推荐页面（左右两列布局）
+2. ✅ 内容实体（标题、作者、时间、点赞、评论、热门标签）
+3. ✅ 点击内容跳转到详情页
+4. ✅ 详情页滑动返回主页
+
+### Feature/Video ✅
+1. ✅ 实体增加视频封面和视频文件属性
+2. ✅ 视频播放器功能（播放、暂停、进度条）
+
 ## 💡 常见问题
 
 **Q: 如何添加新的页面？**
-A: 创建新的 Composable 函数，然后在 `MainActivity` 中调用它，或使用 Navigation 组件进行页面导航。
+A: 在 `ui/screens/` 目录下创建新的 Screen，然后在 `navigation/NavGraph.kt` 中添加路由配置。
+
+**Q: 如何使用本地视频和图片资源？**
+A: 
+- 视频文件放在 `app/src/main/res/raw/` 目录（如 `video1.mp4`）
+- 图片文件放在 `app/src/main/res/drawable/` 目录（如 `cover1.png`）
+- 在 `ContentRepository` 中使用资源名称（不含扩展名），如 `"video1"` 和 `"cover1"`
+- 详细说明请查看 `本地资源使用说明.md`
 
 **Q: 如何添加网络请求？**
-A: 在 `build.gradle.kts` 中添加 Retrofit 或 Ktor 等网络库依赖。
+A: 在 `build.gradle.kts` 中添加 Retrofit 或 Ktor 等网络库依赖，然后在 `model/repository/` 中实现数据获取逻辑。
 
 **Q: 如何保存数据？**
 A: 可以使用 SharedPreferences（简单数据）、Room（数据库）或 DataStore（推荐）。
+
+**Q: 视频播放器支持哪些格式？**
+A: ExoPlayer 支持 MP4、WebM、MKV 等常见视频格式。建议使用 MP4 格式以获得最佳兼容性。
 
 ---
 
