更新文档：添加Feature/User功能说明

--- a/docs/测试说明.md
+++ b/docs/测试说明.md
@@ -29,6 +29,12 @@
   - 测试根据ID查找内容
   - 测试错误清除功能
 
+- ⚠️ **UserViewModel测试** (待添加)
+  - 建议测试登录功能
+  - 建议测试注册功能
+  - 建议测试登出功能
+  - 建议测试登录状态管理
+
 ### 2. 集成测试（Integration Tests）
 **位置**: `app/src/androidTest/java/`
 
@@ -85,8 +91,10 @@
 - ✅ Model层：Content数据模型
 - ✅ Model层：ContentRepository
 - ✅ ViewModel层：HomeViewModel
+- ⚠️ ViewModel层：UserViewModel（待添加测试）
 - ✅ Util层：ResourceHelper
 - ✅ View层：HomeScreen（基础测试）
+- ⚠️ View层：ProfileScreen、LoginScreen、RegisterScreen（待添加测试）
 
 ## 📝 测试最佳实践
 
