--- a/docs/项目结构说明.md
+++ b/docs/项目结构说明.md
@@ -33,21 +33,28 @@ app/
     │   │       ├── MainActivity.kt      # 主Activity（应用入口）⭐
     │   │       ├── model/              # Model层：数据模型和仓库
     │   │       │   ├── data/
-    │   │       │   │   └── Content.kt  # 内容数据模型
+    │   │       │   │   ├── Content.kt  # 内容数据模型
+    │   │       │   │   └── User.kt     # 用户数据模型
     │   │       │   └── repository/
     │   │       │       └── ContentRepository.kt  # 数据仓库
     │   │       ├── viewmodel/          # ViewModel层：状态管理
-    │   │       │   └── HomeViewModel.kt  # 首页视图模型
+    │   │       │   ├── HomeViewModel.kt  # 首页视图模型
+    │   │       │   └── UserViewModel.kt  # 用户视图模型
     │   │       ├── ui/                 # View层：UI相关代码
+    │   │       │   ├── MainScreen.kt   # 主屏幕容器（包含底部导航栏）
     │   │       │   ├── theme/          # 主题配置
     │   │       │   │   ├── Color.kt    # 颜色定义
     │   │       │   │   ├── Theme.kt    # 主题配置
     │   │       │   │   └── Type.kt     # 字体样式
     │   │       │   ├── screens/        # 页面
     │   │       │   │   ├── HomeScreen.kt      # 首页（双列推荐）
-    │   │       │   │   └── DetailScreen.kt    # 详情页
+    │   │       │   │   ├── DetailScreen.kt    # 详情页
+    │   │       │   │   ├── ProfileScreen.kt   # 我的页面
+    │   │       │   │   ├── LoginScreen.kt     # 登录页面
+    │   │       │   │   └── RegisterScreen.kt  # 注册页面
     │   │       │   └── components/     # 可复用组件
-    │   │       │       └── VideoPlayer.kt     # 视频播放器组件
+    │   │       │       ├── VideoPlayer.kt          # 视频播放器组件
+    │   │       │       └── BottomNavigationBar.kt   # 底部导航栏组件
     │   │       ├── navigation/         # 导航相关
     │   │       │   ├── NavGraph.kt     # 导航图配置
     │   │       │   └── Screen.kt       # 路由定义
@@ -92,10 +99,10 @@ app/
    
    这是应用的入口点，包含：
    - `MainActivity` 类：应用的主Activity
-   - `Greeting` 函数：示例Composable组件
    - `onCreate` 方法：应用启动时执行
+   - 初始化 `MainScreen`（包含底部导航栏和导航图）
 
-   **从这里开始**：修改 `Greeting` 函数或添加新的 Composable 函数来构建你的UI。
+   **从这里开始**：应用启动后会显示 `MainScreen`，它包含底部导航栏和所有页面。
 
 ### 2. **应用配置：AndroidManifest.xml** ⭐⭐
    **位置**: `app/src/main/AndroidManifest.xml`
@@ -155,27 +162,34 @@ app/src/main/java/com/xuyang/ttpage/
 │
 ├── model/                        # Model层：数据和业务逻辑
 │   ├── data/
-│   │   └── Content.kt           # 内容数据模型（包含视频属性）
+│   │   ├── Content.kt           # 内容数据模型（包含视频属性）
+│   │   └── User.kt              # 用户数据模型
 │   └── repository/
 │       └── ContentRepository.kt # 数据仓库（提供模拟数据）
 │
 ├── viewmodel/                    # ViewModel层：状态管理
-│   └── HomeViewModel.kt         # 首页视图模型
+│   ├── HomeViewModel.kt         # 首页视图模型
+│   └── UserViewModel.kt         # 用户视图模型（登录/注册/登出）
 │
 ├── ui/                           # View层：UI界面
+│   ├── MainScreen.kt            # 主屏幕容器（包含底部导航栏）
 │   ├── theme/                    # 主题配置
 │   │   ├── Color.kt
 │   │   ├── Theme.kt
 │   │   └── Type.kt
 │   ├── screens/                  # 页面
-│   │   ├── HomeScreen.kt        # 首页（双列推荐布局）
-│   │   └── DetailScreen.kt      # 详情页（显示内容和视频）
+│   │   ├── HomeScreen.kt        # 首页（双列推荐布局，支持返回顶部刷新）
+│   │   ├── DetailScreen.kt      # 详情页（显示内容和视频）
+│   │   ├── ProfileScreen.kt     # 我的页面（用户信息、登录/登出）
+│   │   ├── LoginScreen.kt       # 登录页面
+│   │   └── RegisterScreen.kt    # 注册页面
 │   └── components/              # 可复用组件
-│       └── VideoPlayer.kt       # 视频播放器（播放/暂停/进度条）
+│       ├── VideoPlayer.kt       # 视频播放器（播放/暂停/进度条）
+│       └── BottomNavigationBar.kt  # 底部导航栏（首页+我的）
 │
 ├── navigation/                   # 导航相关
-│   ├── NavGraph.kt              # 导航图配置
-│   └── Screen.kt                # 路由定义
+│   ├── NavGraph.kt              # 导航图配置（包含所有页面路由）
+│   └── Screen.kt                # 路由定义（Home/Profile/Login/Register/Detail）
 │
 └── util/                         # 工具类
     └── ResourceHelper.kt        # 资源工具类（本地资源URI）
@@ -205,9 +219,10 @@ app/src/main/res/
    - 在 Android Studio 中点击运行按钮
    - 或使用命令行：`./gradlew installDebug`
 
-2. **修改示例代码**
-   - 打开 `MainActivity.kt`
-   - 修改 `Greeting` 函数的文本内容
+2. **了解应用结构**
+   - 打开 `MainActivity.kt` 查看应用入口
+   - 查看 `MainScreen.kt` 了解主屏幕结构
+   - 查看 `NavGraph.kt` 了解页面导航
    - 运行应用查看效果
 
 3. **添加新功能**
@@ -232,10 +247,32 @@ app/src/main/res/
 1. ✅ 实体增加视频封面和视频文件属性
 2. ✅ 视频播放器功能（播放、暂停、进度条）
 
+### Feature/Test ✅
+1. ✅ 单元测试（Content、Repository、ViewModel）
+2. ✅ 集成测试（ResourceHelper、UI测试）
+
+### Feature/User ✅
+1. ✅ 底部导航栏（首页+我的）
+2. ✅ 我的页面（显示用户信息、登录/登出）
+3. ✅ 登录页面（用户名密码登录）
+4. ✅ 注册页面（用户名、邮箱、密码注册）
+5. ✅ 首页点击返回顶部并刷新功能
+
 ## 💡 常见问题
 
 **Q: 如何添加新的页面？**
-A: 在 `ui/screens/` 目录下创建新的 Screen，然后在 `navigation/NavGraph.kt` 中添加路由配置。
+A: 
+1. 在 `ui/screens/` 目录下创建新的 Screen Composable函数
+2. 在 `navigation/Screen.kt` 中添加路由定义
+3. 在 `navigation/NavGraph.kt` 中添加 `composable` 路由配置
+4. 如果需要显示在底部导航栏，在 `ui/components/BottomNavigationBar.kt` 中添加导航项
+
+**Q: 如何实现用户登录功能？**
+A: 
+- 使用 `UserViewModel` 管理用户状态
+- 调用 `userViewModel.login(username, password)` 进行登录
+- 通过 `userViewModel.currentUser` 观察当前用户状态
+- 通过 `userViewModel.isLoggedIn` 观察登录状态
 
 **Q: 如何使用本地视频和图片资源？**
 A: 
@@ -252,6 +289,20 @@ A: 可以使用 SharedPreferences（简单数据）、Room（数据库）或 Dat
 
 **Q: 视频播放器支持哪些格式？**
 A: ExoPlayer 支持 MP4、WebM、MKV 等常见视频格式。建议使用 MP4 格式以获得最佳兼容性。
+
+**Q: 底部导航栏如何工作？**
+A: 
+- 底部导航栏在 `MainScreen.kt` 中定义
+- 只在首页和我的页面显示
+- 点击"首页"按钮：如果在首页则返回顶部并刷新，否则导航到首页
+- 点击"我的"按钮：导航到我的页面
+
+**Q: 如何实现用户登录状态管理？**
+A: 
+- 使用 `UserViewModel` 管理用户状态
+- `currentUser` StateFlow 存储当前登录用户
+- `isLoggedIn` StateFlow 表示是否已登录
+- 登录/注册成功后自动更新状态
 
 ---
 
