--- a/docs/测试说明.md
+++ b/docs/测试说明.md
@@ -28,6 +28,28 @@
   - 测试状态管理（loading、error）
   - 测试根据ID查找内容
   - 测试错误清除功能
+  - 测试话题切换功能
+  - 测试刷新和加载更多功能
+
+- ✅ **TopicViewModel测试** (`TopicViewModelTest.kt`)
+  - 测试话题列表加载
+  - 测试话题选择功能
+  - 测试选中话题获取
+
+- ✅ **CommentViewModel测试** (`CommentViewModelTest.kt`)
+  - 测试评论加载功能
+  - 测试添加评论功能
+  - 测试点赞功能
+
+- ✅ **FavoriteViewModel测试** (`FavoriteViewModelTest.kt`)
+  - 测试收藏功能（添加/取消收藏）
+  - 测试浏览历史功能
+  - 测试清空历史功能
+
+- ✅ **FavoriteRepository测试** (`FavoriteRepositoryTest.kt`)
+  - 测试收藏的增删查功能
+  - 测试历史记录的增删查功能
+  - 测试历史记录去重和限制数量
 
 - ✅ **UserViewModel测试** (`UserViewModelTest.kt`)
   - 测试登录功能（成功和失败场景）
@@ -105,7 +127,13 @@
 当前测试覆盖：
 - ✅ Model层：Content数据模型
 - ✅ Model层：ContentRepository
-- ✅ ViewModel层：HomeViewModel
+- ✅ Model层：TopicRepository（通过TopicViewModel测试）
+- ✅ Model层：CommentRepository（通过CommentViewModel测试）
+- ✅ Model层：FavoriteRepository
+- ✅ ViewModel层：HomeViewModel（包含话题切换、刷新、加载更多）
+- ✅ ViewModel层：TopicViewModel
+- ✅ ViewModel层：CommentViewModel
+- ✅ ViewModel层：FavoriteViewModel
 - ✅ ViewModel层：UserViewModel
 - ✅ Util层：ResourceHelper
 - ✅ View层：HomeScreen（基础测试）
@@ -180,7 +208,10 @@ viewModel.contents.test {
 2. **UI测试扩展**
    - 测试用户交互（点击、滑动）
    - 测试导航功能
-   - 测试视频播放器功能
+   - 测试视频播放器功能（倍速、音量控制）
+   - 测试话题切换功能
+   - 测试下拉刷新和上拉加载更多
+   - 测试详情页上下切换功能
 
 3. **性能测试**
    - 测试大数据量加载
