--- a/docs/项目结构说明.md
+++ b/docs/项目结构说明.md
@@ -34,12 +34,19 @@ app/
     │   │       ├── model/              # Model层：数据模型和仓库
     │   │       │   ├── data/
     │   │       │   │   ├── Content.kt  # 内容数据模型
+    │   │       │   │   ├── Topic.kt    # 话题数据模型
     │   │       │   │   └── User.kt     # 用户数据模型
     │   │       │   └── repository/
-    │   │       │       └── ContentRepository.kt  # 数据仓库
+    │   │       │       ├── ContentRepository.kt  # 内容数据仓库
+    │   │       │       ├── TopicRepository.kt    # 话题数据仓库
+    │   │       │       ├── CommentRepository.kt  # 评论数据仓库
+    │   │       │       └── FavoriteRepository.kt # 收藏和历史记录数据仓库
     │   │       ├── viewmodel/          # ViewModel层：状态管理
-    │   │       │   ├── HomeViewModel.kt  # 首页视图模型
-    │   │       │   └── UserViewModel.kt  # 用户视图模型
+    │   │       │   ├── HomeViewModel.kt    # 首页视图模型
+    │   │       │   ├── TopicViewModel.kt   # 话题视图模型
+    │   │       │   ├── CommentViewModel.kt  # 评论视图模型
+    │   │       │   ├── FavoriteViewModel.kt # 收藏和历史记录视图模型
+    │   │       │   └── UserViewModel.kt    # 用户视图模型
     │   │       ├── ui/                 # View层：UI相关代码
     │   │       │   ├── MainScreen.kt   # 主屏幕容器（包含底部导航栏）
     │   │       │   ├── theme/          # 主题配置
@@ -53,8 +60,9 @@ app/
     │   │       │   │   ├── LoginScreen.kt     # 登录页面
     │   │       │   │   └── RegisterScreen.kt  # 注册页面
     │   │       │   └── components/     # 可复用组件
-    │   │       │       ├── VideoPlayer.kt          # 视频播放器组件
-    │   │       │       └── BottomNavigationBar.kt   # 底部导航栏组件
+    │   │       │       ├── VideoPlayer.kt          # 视频播放器组件（支持倍速、音量控制）
+    │   │       │       ├── CommentSection.kt       # 评论区组件
+    │   │       │       └── BottomNavigationBar.kt  # 底部导航栏组件
     │   │       ├── navigation/         # 导航相关
     │   │       │   ├── NavGraph.kt     # 导航图配置
     │   │       │   └── Screen.kt       # 路由定义
@@ -83,14 +91,16 @@ app/
 - **构建工具**: Gradle (Kotlin DSL)
 
 ### 主要依赖库
-- `androidx.compose.material3` - Material 3 设计组件
+- `androidx.compose.material3` - Material 3 设计组件（包含下拉刷新）
 - `androidx.compose.ui` - Compose UI 核心库
+- `androidx.compose.foundation` - Compose Foundation 库（包含 VerticalPager）
 - `androidx.activity.compose` - Activity 与 Compose 集成
 - `androidx.lifecycle.runtime.ktx` - 生命周期管理
 - `androidx.lifecycle.viewmodel.compose` - ViewModel 支持
 - `androidx.navigation.compose` - Navigation 导航组件
 - `androidx.media3.exoplayer` - ExoPlayer 视频播放器
 - `androidx.media3.ui` - ExoPlayer UI 组件
+- `coil-compose` - 图片加载库
 
 ## 🚀 从哪里开始开发？
 
