--- a/docs/测试说明.md
+++ b/docs/测试说明.md
@@ -12,12 +12,12 @@
 单元测试在JVM上运行，不需要Android设备或模拟器，运行速度快。
 
 #### 测试覆盖范围：
-- ✅ **Content数据模型测试** (`ContentTest.kt`)
+- ✅ **Video数据模型测试** (`VideoTest.kt`)
   - 测试 `hasVideo` 属性的各种情况
   - 测试数据模型的字段完整性
   - 测试数据相等性
 
-- ✅ **ContentRepository测试** (`ContentRepositoryTest.kt`)
+- ✅ **VideoRepository测试** (`VideoRepositoryTest.kt`)
   - 测试数据获取功能
   - 测试返回数据的有效性
   - 测试数据唯一性
@@ -125,8 +125,8 @@
 ## 📊 测试覆盖率
 
 当前测试覆盖：
-- ✅ Model层：Content数据模型
-- ✅ Model层：ContentRepository
+- ✅ Model层：Video数据模型
+- ✅ Model层：VideoRepository
 - ✅ Model层：TopicRepository（通过TopicViewModel测试）
 - ✅ Model层：CommentRepository（通过CommentViewModel测试）
 - ✅ Model层：FavoriteRepository
