--- a/docs/项目结构说明.md
+++ b/docs/项目结构说明.md
@@ -33,13 +33,14 @@ app/
     │   │       ├── MainActivity.kt      # 主Activity（应用入口）⭐
     │   │       ├── model/              # Model层：数据模型和仓库
     │   │       │   ├── data/
-    │   │       │   │   ├── Content.kt  # 内容数据模型
+    │   │       │   │   ├── Video.kt    # 视频数据模型
     │   │       │   │   ├── Topic.kt    # 话题数据模型
+    │   │       │   │   ├── Comment.kt  # 评论数据模型
     │   │       │   │   └── User.kt     # 用户数据模型
     │   │       │   └── repository/
-    │   │       │       ├── ContentRepository.kt  # 内容数据仓库
+    │   │       │       ├── VideoRepository.kt     # 视频数据仓库
     │   │       │       ├── TopicRepository.kt    # 话题数据仓库
-    │   │       │       ├── CommentRepository.kt  # 评论数据仓库
+    │   │       │       ├── CommentRepository.kt   # 评论数据仓库
     │   │       │       └── FavoriteRepository.kt # 收藏和历史记录数据仓库
     │   │       ├── viewmodel/          # ViewModel层：状态管理
     │   │       │   ├── HomeViewModel.kt    # 首页视图模型
