--- a/docs/项目结构说明.md
+++ b/docs/项目结构说明.md
@@ -40,13 +40,11 @@ app/
     │   │       │   └── repository/
     │   │       │       ├── VideoRepository.kt     # 视频数据仓库
     │   │       │       ├── TopicRepository.kt    # 话题数据仓库
-    │   │       │       ├── CommentRepository.kt   # 评论数据仓库
-    │   │       │       └── FavoriteRepository.kt # 收藏和历史记录数据仓库
+    │   │       │       └── CommentRepository.kt   # 评论数据仓库
     │   │       ├── viewmodel/          # ViewModel层：状态管理
     │   │       │   ├── HomeViewModel.kt    # 首页视图模型
     │   │       │   ├── TopicViewModel.kt   # 话题视图模型
     │   │       │   ├── CommentViewModel.kt  # 评论视图模型
-    │   │       │   ├── FavoriteViewModel.kt # 收藏和历史记录视图模型
     │   │       │   └── UserViewModel.kt    # 用户视图模型
     │   │       ├── ui/                 # View层：UI相关代码
     │   │       │   ├── MainScreen.kt   # 主屏幕容器（包含底部导航栏）
