--- a/docs/本地资源使用说明.md
+++ b/docs/本地资源使用说明.md
@@ -53,7 +53,7 @@ app/src/main/res/drawable/
 ## 📝 代码中的使用方式
 
 ### Repository中的配置
-在 `ContentRepository.kt` 中，使用资源名称（不含扩展名）：
+在 `VideoRepository.kt` 中，使用资源名称（不含扩展名）：
 
 ```kotlin
 Content(
@@ -93,7 +93,7 @@ Content(
 - `app/src/main/res/raw/video1.mp4`
 - `app/src/main/res/drawable/cover1.png`
 
-在 `ContentRepository.kt` 中这样使用：
+在 `VideoRepository.kt` 中这样使用：
 
 ```kotlin
 Content(
