--- a/docs/测试说明.md
+++ b/docs/测试说明.md
@@ -49,7 +49,7 @@
   - 测试错误清除功能
   - 测试加载状态
 
-### 2. 集成测试（Integration Tests）
+### 2. 冒烟集成测试（Integration Tests）
 **位置**: `app/src/androidTest/java/`
 
 集成测试需要在Android设备或模拟器上运行，可以测试需要Android Context的功能。
