--- a/docs/项目结构说明.md
+++ b/docs/项目结构说明.md
@@ -174,7 +174,7 @@ app/src/main/java/com/xuyang/ttpage/
 │   │   ├── Content.kt           # 内容数据模型（包含视频属性）
 │   │   └── User.kt              # 用户数据模型
 │   └── repository/
-│       └── ContentRepository.kt # 数据仓库（提供模拟数据）
+│       └── VideoRepository.kt # 视频数据仓库（提供模拟数据）
 │
 ├── viewmodel/                    # ViewModel层：状态管理
 │   ├── HomeViewModel.kt         # 首页视图模型
@@ -287,7 +287,7 @@ A:
 A: 
 - 视频文件放在 `app/src/main/res/raw/` 目录（如 `video1.mp4`）
 - 图片文件放在 `app/src/main/res/drawable/` 目录（如 `cover1.png`）
-- 在 `ContentRepository` 中使用资源名称（不含扩展名），如 `"video1"` 和 `"cover1"`
+- 在 `VideoRepository` 中使用资源名称（不含扩展名），如 `"video1"` 和 `"cover1"`
 - 详细说明请查看 `本地资源使用说明.md`
 
 **Q: 如何添加网络请求？**
